// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files Component  should not render component with no files 1`] = `""`;

exports[`Files Component  should not render cultural message 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Files"
  >
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
           
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(Typography)
            gutterBottom={true}
            variant="caption"
          >
            File name
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            md={2}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Size
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
          />
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-0"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="web_image.jpg"
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <WithStyles(Thumbnail)
                fileName="web_image.jpg"
                mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              testing image description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              95.49 KB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453695}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Files Component  should render alert for video files and firefox 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Files"
  >
    <WithStyles(Alert)
      allowDismiss={true}
      message="Please RIGHT CLICK then select link SAVE AS option to save and play video files"
      title="FireFox Users"
      type="help_outline"
    />
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
           
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(Typography)
            gutterBottom={true}
            variant="caption"
          >
            File name
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            md={2}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Size
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
          />
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-0"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="CH7409_movie_1.mov"
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
            mimeType="video/quicktime"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
            thumbnailFileName="thumbnail_CH7409_movie_1.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_1.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="2.86 MB"
            description="Movie 1"
            fileName="CH7409_movie_1.mov"
            icon={
              <WithStyles(Thumbnail)
                fileName="CH7409_movie_1.mov"
                mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
                mimeType="video/quicktime"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
                thumbnailFileName="thumbnail_CH7409_movie_1.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_1.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
            mimeType="video/quicktime"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_1.mov"
            thumbnailFileName="thumbnail_CH7409_movie_1.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Movie 1
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              2.86 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="1"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-1"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="CH7409_movie_2.mov"
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
            mimeType="video/quicktime"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
            thumbnailFileName="thumbnail_CH7409_movie_2.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_2.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="2.62 MB"
            description="Movie 2"
            fileName="CH7409_movie_2.mov"
            icon={
              <WithStyles(Thumbnail)
                fileName="CH7409_movie_2.mov"
                mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
                mimeType="video/quicktime"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
                thumbnailFileName="thumbnail_CH7409_movie_2.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_2.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
            mimeType="video/quicktime"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_2.mov"
            thumbnailFileName="thumbnail_CH7409_movie_2.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Movie 2
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              2.62 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="2"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-2"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="CH7409_movie_3.mov"
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
            mimeType="video/quicktime"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
            thumbnailFileName="thumbnail_CH7409_movie_3.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_3.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="2.86 MB"
            description="Movie 3"
            fileName="CH7409_movie_3.mov"
            icon={
              <WithStyles(Thumbnail)
                fileName="CH7409_movie_3.mov"
                mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
                mimeType="video/quicktime"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
                thumbnailFileName="thumbnail_CH7409_movie_3.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_3.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
            mimeType="video/quicktime"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_3.mov"
            thumbnailFileName="thumbnail_CH7409_movie_3.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Movie 3
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              2.86 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="3"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-3"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="CH7409_movie_4.mov"
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
            mimeType="video/quicktime"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
            thumbnailFileName="thumbnail_CH7409_movie_4.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_4.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="4.29 MB"
            description="Movie 4"
            fileName="CH7409_movie_4.mov"
            icon={
              <WithStyles(Thumbnail)
                fileName="CH7409_movie_4.mov"
                mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
                mimeType="video/quicktime"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
                thumbnailFileName="thumbnail_CH7409_movie_4.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_4.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
            mimeType="video/quicktime"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_4.mov"
            thumbnailFileName="thumbnail_CH7409_movie_4.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Movie 4
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              4.29 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="4"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-4"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="CH7409_movie_5.mov"
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
            mimeType="video/quicktime"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
            thumbnailFileName="thumbnail_CH7409_movie_5.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_5.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="1.12 MB"
            description="Movie 5"
            fileName="CH7409_movie_5.mov"
            icon={
              <WithStyles(Thumbnail)
                fileName="CH7409_movie_5.mov"
                mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
                mimeType="video/quicktime"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
                thumbnailFileName="thumbnail_CH7409_movie_5.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:185044/thumbnail_CH7409_movie_5.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
            mimeType="video/quicktime"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/CH7409_movie_5.mov"
            thumbnailFileName="thumbnail_CH7409_movie_5.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Movie 5
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              1.12 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="5"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-5"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <pure(PictureAsPdfIcon)
            color="secondary"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="6.67 MB"
            description="Technical report PDF file"
            fileName="ch7409_report.pdf"
            icon={
              <pure(PictureAsPdfIcon)
                color="secondary"
              />
            }
            mediaUrl="http://localhost/view/UQ:185044/ch7409_report.pdf"
            mimeType="application/pdf"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453697,
              }
            }
            pid="UQ:185044"
            previewMediaUrl="http://localhost/view/UQ:185044/ch7409_report.pdf"
            thumbnailFileName={false}
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              Technical report PDF file
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              6.67 MB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453697}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Files Component  should render component 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Files"
  >
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
           
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(Typography)
            gutterBottom={true}
            variant="caption"
          >
            File name
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            md={2}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Size
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
          />
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-0"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="web_image.jpg"
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <WithStyles(Thumbnail)
                fileName="web_image.jpg"
                mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              testing image description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              95.49 KB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453695}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Files Component  should render cultural message 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Files"
  >
    <WithStyles(Alert)
      allowDismiss={true}
      dismissAction={[MockFunction]}
      message="hello"
      type="info"
    />
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
           
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(Typography)
            gutterBottom={true}
            variant="caption"
          >
            File name
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            md={2}
          >
            <WithStyles(Typography)
              gutterBottom={true}
              variant="caption"
            >
              Size
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
          />
        </Hidden>
      </WithStyles(Grid)>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(Grid)
        alignItems="center"
        className="header"
        container={true}
        direction="row"
        key="file-0"
        spacing={16}
        wrap="nowrap"
      >
        <WithStyles(Grid)
          item={true}
          xs={1}
        >
          <WithStyles(Thumbnail)
            fileName="web_image.jpg"
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onClick={[Function]}
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
            thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
        >
          <WithStyles(FileName)
            allowDownload={true}
            calculatedSize="95.49 KB"
            description="testing image description"
            fileName="image.jpg"
            icon={
              <WithStyles(Thumbnail)
                fileName="web_image.jpg"
                mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
                mimeType="image/jpeg"
                onClick={[Function]}
                previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
                thumbnailFileName="thumbnail_image.jpg"
                thumbnailMediaUrl="http://localhost/view/UQ:676287/thumbnail_image.jpg"
              />
            }
            mediaUrl="http://localhost/view/UQ:676287/web_image.jpg"
            mimeType="image/jpeg"
            onFileSelect={[Function]}
            openAccessStatus={
              Object {
                "embargoDate": null,
                "isOpenAccess": true,
                "openAccessStatusId": 453695,
              }
            }
            pid="UQ:676287"
            previewMediaUrl="http://localhost/view/UQ:676287/preview_image.jpg"
            thumbnailFileName="thumbnail_image.jpg"
          />
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={4}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              testing image description
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={true}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
          >
            <WithStyles(Typography)
              noWrap={true}
              variant="body2"
            >
              95.49 KB
            </WithStyles(Typography)>
          </WithStyles(Grid)>
        </Hidden>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            sm={true}
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <OpenAccessIcon
              embargoDate={null}
              isOpenAccess={true}
              openAccessStatusId={453695}
              showEmbargoText={false}
            />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </div>
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Files Component  should render icon for mimeType 1`] = `ShallowWrapper {}`;

exports[`Files Component  should render icon for mimeType 2`] = `ShallowWrapper {}`;

exports[`Files Component  should render icon for mimeType 3`] = `ShallowWrapper {}`;

exports[`Files Component  should render icon for mimeType 4`] = `ShallowWrapper {}`;

exports[`Files Component  should render icon for mimeType 5`] = `ShallowWrapper {}`;

exports[`Files Component  should render icon for mimeType 6`] = `ShallowWrapper {}`;
